fix nav menu hiding hamburger menu on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,9 +257,9 @@ hr {
         flex-direction: column;
         justify-content: flex-start;
         position: fixed;
-        top: 0;
+        bottom: 0;
         left: -100%;
-        height: 100%;
+        height: auto;
         width: 100%;
         background-color: var(--background-color);
         transition: left 0.3s ease, opacity 0.3s ease;
